# cognac

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
cognac/: __init__.py
cognac/core/: BaseEnv.py  BaseReward.py  __init__.py
cognac/env/: __init__.py
cognac/env/BinaryConsensus/: __init__.py  env.py  rewards.py
cognac/env/FirefightingGraph/: __init__.py  env.py  rewards.py
cognac/env/MultiCommodityFlow/: __init__.py  env.py  rewards.py
cognac/env/SysAdmin/: __init__.py  env.py  rewards.py
cognac/utils/: graph_utils.py  make_env.py  visualization.py
docs/: conf.py  index.rst  marl.rst  refs.bib
docs/_build/doctrees/: environment.pickle  index.doctree  marl.doctree  quickstart.doctree
docs/_build/doctrees/source/: cognac.core.doctree  cognac.doctree  cognac.env.BinaryConsensus.doctree  cognac.env.FirefightingGraph.doctree  cognac.env.MultiCommodityFlow.doctree  cognac.env.SysAdmin.doctree  cognac.env.doctree  cognac.utils.doctree  modules.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  marl.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  marl.rst.txt  quickstart.rst.txt
docs/_build/html/source/: cognac.core.html  cognac.env.BinaryConsensus.html  cognac.env.FirefightingGraph.html  cognac.env.MultiCommodityFlow.html  (+5 more)
docs/source/: cognac.core.rst  cognac.env.FirefightingGraph.rst  cognac.env.MultiCommodityFlow.rst  cognac.env.rst  cognac.rst  cognac.utils.rst
(+9 files in other folders)
