[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognac"
description = "Cooperative Graph-based Networked Agent Challenges for Multi-Agent Reinforcement Learning."
authors = [{ name = "Jules Sintes", email = "jules.sintes@inria.fr" }]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium >=1.0.0",
    "numpy >=2.1.3",
    "matplotlib >=3.0",
    "pettingzoo >=1.24",
    "networkx >=3.4",
    "imageio >=2.37",
]

[project.optional-dependencies]
docs = ["sphinx",
        "sphinx_rtd_theme",
]

[tool.setuptools]
packages = ["cognac"]

[project.urls]
Homepage = "https://github.com/yojul/cognac#"
Issues = "https://github.com/yojul/cognac/issues"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]